--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             
            </rect>
            <circle
-           fill="green"
+           fill="red"
            stroke="black"
            stroke width="1"
            r="100"
